--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/bank
-spring.datasource.username= postgres
-spring.datasource.password= password
+server.port = 8081
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url = jdbc:postgresql://localhost:5432/bank
+spring.datasource.username = postgres
+spring.datasource.password = password
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=false
-spring.sql.init.mode=never
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.defer-datasource-initialization = false
+spring.sql.init.mode = never
+
+jwt.secret = YT982TY23897Y698U23HYTGIUO23H89
