Add initial data in database

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto = create
-spring.jpa.defer-datasource-initialization = false
-spring.sql.init.mode = never
+spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode = always
 
 jwt.secret = YT982TY23897Y698U23HYTGIUO23H89
