--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/bank
 spring.datasource.username= postgres
-spring.datasource.password= password
+spring.datasource.password= 12341234
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
