Add all transactions rules

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port = 8081
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/bank
 spring.datasource.username = postgres
-spring.datasource.password = password
+spring.datasource.password = admin
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
 
