--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>slf4j-nop</artifactId>
             <version>2.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
     </dependencies>
 
